# openeuler-ubs-comm

./: .clang-format  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASE-NOTES.md  WORKSPACE  build.sh  build_bazel.sh  config.yml  hcom.spec
src/: BUILD.bazel  CMakeLists.txt  hcom.cpp  hcom.h  hcom_def.h  hcom_err.h  hcom_log.cpp  hcom_num_def.h  hcom_obj_statistics.cpp  hcom_ref.h  hcom_utils.cpp  hcom_utils.h
src/api/capi_v2/: hcom_c.cpp  hcom_def_inner_c.h  hcom_service_c.cpp  hcom_service_c.h
src/common/: hcom_env.h  net_bucket_linked_list.h  net_crc32.cpp  net_crc32.h  net_execution_service.cpp  net_linked_list.h  net_mem_allocator.h  net_mem_allocator_cache.cpp  net_mem_pool_fixed.cpp  net_mem_pool_fixed.h  net_monotonic.h  net_pgtable.cpp  net_pgtable.h  net_rb_tree.h  net_security_alg.cpp  net_security_alg.h  net_security_rand.h  net_trace.cpp  net_util.cpp  net_util.h
src/common/trace/: htracer.cpp  htracer.h  htracer_manager.h  htracer_msg.h  htracer_service.cpp  htracer_service.h  htracer_service_helper.h  htracer_utils.h  rpc_msg.h  rpc_server.cpp
src/hcom/: BUILD.bazel  CMakeLists.txt  hcom.cpp  hcom.h  hcom_def.h  hcom_log.h  hcom_num_def.h  hcom_obj_statistics.h  hcom_split.cpp  hcom_split.h
src/hcom/common/: code_msg.h  net_addr_size_map.h  net_common.h  net_execution_service.h  net_mem_allocator.cpp  net_mem_allocator_cache.h  net_obj_pool.h  net_trace.cpp  net_trace.h
src/hcom/multicast/: multicast_config_imp.cpp  multicast_config_imp.h  multicast_periodic_manager.cpp  multicast_periodic_manager.h  multicast_publisher.cpp  multicast_publisher_service.cpp  multicast_publisher_service_imp.cpp  multicast_publisher_service_imp.h  multicast_subscriber_service.cpp  multicast_subscriber_service_imp.cpp  multicast_subscriber_service_imp.h
src/hcom/service_v2/: net_param_validator.h  service_channel_imp.cpp  service_channel_imp.h  service_common.cpp  service_common.h  service_context.cpp  service_ctx_store.h  service_imp.cpp  service_imp.h  service_periodic_manager.cpp
src/hcom/transport/: net_delay_release_timer.cpp  net_delay_release_timer.h  net_endpoint_impl.h  net_memory_region.cpp  net_memory_region.h  net_oob.cpp  net_oob.h  net_oob_openssl.cpp  net_oob_openssl.h  net_oob_secure.h  net_oob_ssl.cpp  net_oob_ssl.h
src/hcom/umq/: BUILD.bazel  CMakeLists.txt
src/service_v2/: net_param_validator.h  service.cpp  service_callback.h  service_common.h  service_context.cpp  service_ctx_store.h  service_imp.cpp  service_imp.h  service_periodic_manager.h
src/service_v2/api/: hcom_service.h  hcom_service_channel.h  hcom_service_context.h  hcom_service_def.h
src/transport/: net_ctx_info_pool.h  net_endpoint_impl.cpp  net_heartbeat.cpp  net_heartbeat.h  net_load_balance.h  net_memory_region.h  net_oob_openssl.cpp  net_oob_openssl.h  net_oob_secure.cpp  net_oob_ssl.cpp
src/transport/rdma/: rdma_common.h  rdma_heartbeat.cpp  rdma_mr_dm_buf.h  rdma_mr_fixed_buf.cpp  rdma_mr_fixed_buf.h  rdma_mr_pool.cpp  rdma_mr_pool.h
src/transport/shm/: net_shm_async_endpoint.cpp  net_shm_async_endpoint.h  net_shm_driver_oob.cpp  net_shm_driver_oob.h  net_shm_sync_endpoint.h  shm_channel.h  shm_channel_keeper.cpp  shm_channel_keeper.h  shm_common.h  shm_composed_endpoint.cpp  shm_composed_endpoint.h  shm_data_channel.h  shm_handle.h  shm_handle_fds.h  shm_lock_guard.h  shm_mr_pool.cpp  shm_mr_pool.h  shm_worker_io.cpp
src/transport/sock/: net_sock_common.h  net_sock_driver_oob.cpp  net_sock_driver_oob.h  net_sock_sync_endpoint.cpp  sock_buff.h  sock_common.h  sock_worker_io.cpp  sock_wrapper.cpp  sock_wrapper.h
src/transport/ub/: net_ub_driver.cpp  net_ub_driver.h  net_ub_driver_oob.cpp  net_ub_driver_oob.h  ub_common.h  ub_fixed_mem_pool.h  ub_jetty_ptr_map.h  ub_mr_pool.cpp  ub_mr_pool.h  ub_thread_pool.cpp  ub_thread_pool.h  ub_urma_wrapper_ctx.cpp  ub_urma_wrapper_ctx.h  ub_urma_wrapper_jetty.cpp  ub_urma_wrapper_jetty.h  ub_urma_wrapper_jfc.cpp  ub_urma_wrapper_jfc.h  ub_urma_wrapper_public_jetty.cpp  ub_urma_wrapper_public_jetty.h  ub_worker_core.cpp  ub_worker_io.cpp
src/ubsocket/: CMakeLists.txt  README.md  buffer_util.h  cli_message.cpp  cli_message.h  configure_settings.cpp  configure_settings.h  file_descriptor.cpp  file_descriptor.h  leaky_singleton.h  net_common.h  polling_epoll.cpp  polling_epoll.h  print_stats_mgr.h  probe_manager.h  rpc_adpt_vlog.cpp  rpc_adpt_vlog.h  scope_exit.h  socket_adapter.h  statistics.cpp  statistics.h  ub_lock_manager.h  ub_lock_ops.cpp  ub_thread_pool.cpp  ub_thread_pool.h  urpc_util.cpp  urpc_util.h  util_vlog.cpp  util_vlog.h
src/ubsocket/brpc/: CMakeLists.txt  brpc_configure_settings.h  brpc_context.cpp  brpc_context.h  brpc_dynsym_scanner.h  brpc_file_descriptor.cpp  brpc_file_descriptor.h  brpc_iobuf_adapter.cpp  brpc_iobuf_adapter.h  brpc_share_jfr.cpp  brpc_share_jfr.h  brpc_socket_adapter.cpp  brpc_socket_adapter.h  brpc_thread_pool.cpp  brpc_thread_pool.h  qbuf_list.h  qbuf_queue.h  share_jfr_common.h
src/ubsocket/cli/: CMakeLists.txt  cli_args_parser.cpp  cli_args_parser.h  cli_client.cpp  cli_client.h  cli_main.cpp  cli_terminal_display.cpp  cli_terminal_display.h
src/ubsocket/trace/: utracer.cpp  utracer.h  utracer_def.h  utracer_info.h  utracer_manager.h  utracer_tdigest.h  utracer_utils.h
src/ubsocket/unit_test/: CMakeLists.txt  cli_message_test.cpp  configure_settings_test.cpp  file_descriptor_test.cpp  polling_epoll_test.cpp  print_stats_mgr_test.cpp  statistics_test.cpp  ub_lock_ops_test.cpp  urpc_adpt_vlog_test.cpp  urpc_util_test.cpp
src/under_api/obmm/: obmm_api_dl.cpp  obmm_api_dl.h  obmm_api_wrapper.h
src/under_api/openssl/: openssl_api_dl.h
src/under_api/urma/: urma_api_dl.cpp  urma_api_dl.h  urma_api_wrapper.h
src/under_api/verbs/: verbs_api_dl.cpp  verbs_api_wrapper.h
test/hcom/: CMakeLists.txt
test/hcom/external_libs/: mockcpp_support_arm64.patch
test/hcom/llt/: CMakeLists.txt
test/hcom/stub/: CMakeLists.txt  fake_ibv.cpp  fake_ibv.h  hcom_securec.cpp  hcom_securec.h
test/llt/: CMakeLists.txt
test/unit_test/: CMakeLists.txt
(+588 files in other folders)
