# SPDX-License-Identifier: MIT
# Copyright (c) Huawei Technologies Co., Ltd. 2020-2026. All rights reserved.

package(default_visibility = ["//visibility:public"])

alias(
    name = "ubsocket",
    actual = "//src:ubsocket",
)

alias(
    name = "hcom",
    actual = "//src/hcom:hcom_static",
)

alias(
    name = "ubstat",
    actual = "//src:ubstat",
)

filegroup(
    name = "release_package",
    srcs = [
        "//src:release_package",
        "//src:hcom_release_package",
    ],
)
